@@ -239,6 +239,12 @@
         <property name="ShortLabel" translatable="yes">Реестр документов</property>
         <signal name="Activated" handler="OnAction38Activated" />
       </action>
+      <action id="Action39">
+        <property name="Type">Action</property>
+        <property name="Label" translatable="yes">Реестр договоров</property>
+        <property name="ShortLabel" translatable="yes">Реестр договоров</property>
+        <signal name="Activated" handler="OnAction39Activated" />
+      </action>
     </action-group>
     <property name="MemberName" />
     <property name="Title" translatable="yes">База арендаторов (БазАр)</property>
@@ -286,6 +292,7 @@
                 </node>
                 <node type="Menuitem" action="Action33" />
                 <node type="Menuitem" action="Action38" />
+                <node type="Menuitem" action="Action39" />
               </node>
               <node type="Menu" action="Action34">
                 <node type="Menuitem" action="helpAction" />
@@ -2724,7 +2731,6 @@
                             <property name="MemberName" />
                             <property name="CanFocus">True</property>
                             <property name="Label" translatable="yes">Сегодня</property>
-                            <property name="Active">True</property>
                             <property name="DrawIndicator">True</property>
                             <property name="HasLabel">True</property>
                             <property name="UseUnderline">True</property>
@@ -7172,11 +7178,11 @@
       </widget>
     </child>
   </widget>
-  <widget class="Gtk.Dialog" id="bazar.IncomeSlip" design-size="704 562">
+  <widget class="Gtk.Dialog" id="bazar.IncomeSlip" design-size="704 568">
     <property name="MemberName" />
     <property name="Title" translatable="yes">Новый приходный ордер</property>
     <property name="WindowPosition">CenterOnParent</property>
-    <property name="Buttons">2</property>
+    <property name="Buttons">3</property>
     <property name="HelpButton">False</property>
     <child internal-child="VBox">
       <widget class="Gtk.VBox" id="dialog1_VBox">
@@ -7826,7 +7832,7 @@
               </packing>
             </child>
             <child>
-              <widget class="Gtk.Label" id="label1">
+              <widget class="Gtk.Label" id="label5">
                 <property name="MemberName" />
                 <property name="Xalign">0</property>
                 <property name="LabelProp" translatable="yes">Основание:</property>
@@ -7839,7 +7845,7 @@
               </packing>
             </child>
             <child>
-              <widget class="Gtk.ScrolledWindow" id="GtkScrolledWindow">
+              <widget class="Gtk.ScrolledWindow" id="GtkScrolledWindow1">
                 <property name="MemberName" />
                 <property name="ShadowType">In</property>
                 <property name="BorderWidth">3</property>
@@ -7871,8 +7877,25 @@
         <property name="MemberName" />
         <property name="Spacing">10</property>
         <property name="BorderWidth">5</property>
-        <property name="Size">2</property>
+        <property name="Size">3</property>
         <property name="LayoutStyle">End</property>
+        <child>
+          <widget class="Gtk.Button" id="buttonPrint">
+            <property name="MemberName" />
+            <property name="Sensitive">False</property>
+            <property name="CanFocus">True</property>
+            <property name="Type">TextAndIcon</property>
+            <property name="Icon">stock:gtk-print Button</property>
+            <property name="Label" translatable="yes">Печать</property>
+            <property name="UseUnderline">True</property>
+            <property name="ResponseId">0</property>
+            <signal name="Clicked" handler="OnButtonPrintClicked" />
+          </widget>
+          <packing>
+            <property name="Expand">False</property>
+            <property name="Fill">False</property>
+          </packing>
+        </child>
         <child>
           <widget class="Gtk.Button" id="buttonCancel">
             <property name="MemberName" />
@@ -7885,6 +7908,7 @@
             <property name="ResponseId">-6</property>
           </widget>
           <packing>
+            <property name="Position">1</property>
             <property name="Expand">False</property>
             <property name="Fill">False</property>
           </packing>
@@ -7903,7 +7927,7 @@
             <signal name="Clicked" handler="OnButtonOkClicked" />
           </widget>
           <packing>
-            <property name="Position">1</property>
+            <property name="Position">2</property>
             <property name="Expand">False</property>
             <property name="Fill">False</property>
           </packing>
@@ -12240,7 +12264,7 @@
 Февраля
 Марта
 Апреля
-Майя
+Мая
 Июня
 Июля
 Августа
